<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Friday countdown</string>
    
    <string name="configuration_when_start_friday">When you start Friday?</string>
    <string name="configuration_notify_me">Notify me</string>

    <string name="configuration_widget_type">Color of the countdown widget</string>
	<string name="configuration_widget_type_dark">Dark</string>
	<string name="configuration_widget_type_bright">Bright</string>
	<string name="configuration_widget_type_transparent">Semi-transparent background</string>
	
    <string name="friday_time_left">Until Friday left</string>
    <string name="friday_time_left_day1">Until Friday left</string>
    <string name="friday_time_left_hour1">Until Friday left</string>
    <string name="friday_time_left_min1">Until Friday left</string>

    <string name="friday_has_come">Friday has come!</string>
    <string name="saturday_has_come">is Saturday</string>
    <string name="sunday_has_come">still Sunday</string>
    
    <string name="action_visit_project_page">Visit the project page on Facebook.</string>
    <string name="action_enjoy_picture">Enjoy Friday\'s picture.</string>
        
    <string name="plural_day0">day</string>
    <string name="plural_day1"></string>
    <string name="plural_day2">s</string>
    <string name="plural_day3">s</string>

    <string name="plural_hour0">hour</string>
    <string name="plural_hour1"></string>
    <string name="plural_hour2">s</string>
    <string name="plural_hour3">s</string>
    
    <string name="plural_min0">minute</string>
    <string name="plural_min1"></string>
    <string name="plural_min2">s</string>
    <string name="plural_min3">s</string>

	<string name="error_external_storage">Failed to access the SD card</string>
	<string name="error_write_storage">Error reading from an external drive</string>
	<string name="error_read_storage">Error writing to an external drive</string>
	<string name="error_connection">Error during data transfer</string>
	<string name="error_connection_status">Error occurred while trying download file</string> 
	<string name="error_connection_not_present">Internet connection not present</string> 
		
    <string name="missing_content_dialog_title">Missed content</string>
    <string name="missing_content_dialog_message">Do you want to download a few missing pictures?</string>
    <string name="missing_content_progress">Pictures downloading</string>
        
    <string name="image_rating_changed">Picture rating changed</string>
    
    <string name="app_info_text">To place the widget on your home screen select \"Friday countdown\" from the Widget list.</string>
    <string name="app_info_launcher">Look for this icon:</string>
    
</resources>