<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:text="@string/configuration_when_start_friday"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TimePicker
                android:id="@+id/friday_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip" />

            <CheckBox
                android:id="@+id/notify_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/configuration_notify_me" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:text="@string/configuration_widget_type"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/widget_type_dark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:layout_marginRight="10dip"
                    android:text="@string/configuration_widget_type_dark" />
                
                <RadioButton
                    android:id="@+id/widget_type_bright"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/configuration_widget_type_bright" />

            </RadioGroup>

            <CheckBox
                android:id="@+id/widget_type_transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/configuration_widget_type_transparent" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:theme="@android:style/ButtonBar">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minWidth="100dip"
            android:text="@android:string/cancel" />
        
        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minWidth="100dip"
            android:text="@android:string/ok" />

        </LinearLayout>

</LinearLayout>